[project]
name = "light-asd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gdown>=6.1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "python-speech-features>=0.6",
    "scenedetect<0.6",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "yt-dlp>=2026.6.9",
]
